# arkui_napi

./: .BUILD.gn.swp  AGENTS.md  BUILD.gn  README.md  README_zh.md  ace_napi.versionscript  bundle.json  libnapi.ndk.json  napi.gni
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
callback_scope_manager/: native_callback_scope_manager.cpp
docs/knowledge/: build-platform.md  cjffi.md  engine.md  module-manager.md  napi-differences.md
interfaces/inner_api/cjffi/ark_interop_helper/: BUILD.gn  ark_interop_helper.cpp  ark_interop_helper.h  custom_scope.h  utils.h
jsvm/: BUILD.gn  build_jsvm.sh  build_jsvm_inter.sh  copy_v8.sh
module_manager/: module_checker_delegate.h  module_load_checker.cpp  module_load_checker.h  native_module_manager.cpp  native_module_manager.h
native_engine/: native_api.cpp  native_api_internal.h  native_async_context.h  native_async_hook_context.h  native_async_work.cpp  native_async_work.h  native_container_scope.h  native_create_env.cpp  native_create_env.h  native_engine.cpp  native_engine.h  native_engine_interface.cpp  native_engine_interface.h  native_event.cpp  native_event.h  native_node_api.cpp  native_node_hybrid_api.cpp  native_property.h  native_reference.cpp  native_reference.h  native_safe_async_work.cpp  native_safe_async_work.h  native_sendable.cpp  native_sendable.h  native_utils.h  native_value-inl.h  native_value.h
reference_manager/: native_reference_manager.cpp  native_reference_manager.h
sample/native_module_advanced_examples/: README.md
sample/native_module_array/: BUILD.gn  napi_array.cpp
sample/native_module_array_ops/: BUILD.gn  js_array_helper.cpp  js_array_helper.h
sample/native_module_array_suite/: BUILD.gn  array_tests.cpp
sample/native_module_arraybuffer_suite/: BUILD.gn  napi_arraybuffer_suite.cpp
sample/native_module_async_suite/: BUILD.gn  async_tests.cpp
sample/native_module_bigint/: BUILD.gn  napi_bigint.cpp
sample/native_module_boolean_suite/: BUILD.gn  boolean_tests.cpp
sample/native_module_buffer/: BUILD.gn  napi_buffer.cpp
sample/native_module_buffer_suite/: BUILD.gn  buffer_tests.cpp
sample/native_module_calc/: BUILD.gn
sample/native_module_calculator/: BUILD.gn  napi_calculator.cpp
sample/native_module_callback/: BUILD.gn  js_callback.cpp
sample/native_module_callback_suite/: BUILD.gn  callback_tests.cpp
sample/native_module_clamp_suite/: BUILD.gn  clamp_tests.cpp
sample/native_module_collection_suite/: BUILD.gn  collection_suite.cpp
sample/native_module_color/: BUILD.gn  js_color_helper.cpp  js_color_helper.h
sample/native_module_complex/: BUILD.gn  complex.js  napi_complex.cpp
sample/native_module_compression/: BUILD.gn  compression.js  napi_compression.cpp
sample/native_module_console/: BUILD.gn  console.cpp
sample/native_module_convert_suite/: BUILD.gn  napi_convert_suite.cpp
sample/native_module_crypto/: BUILD.gn  crypto_utils.cpp  crypto_utils.h  native_module_crypto.cpp
sample/native_module_crypto_ops/: BUILD.gn  js_encoding_helper.cpp  js_encoding_helper.h
sample/native_module_crypto_suite/: BUILD.gn  napi_crypto_suite.cpp
sample/native_module_crypto_utils/: BUILD.gn  README.md  crypto_utils.cpp
sample/native_module_data/: BUILD.gn  data.js  napi_data.cpp
sample/native_module_date/: BUILD.gn  date.js  napi_date.cpp
sample/native_module_date_suite/: BUILD.gn  date_tests.cpp
sample/native_module_date_utils/: BUILD.gn  js_date_utils_helper.cpp  js_date_utils_helper.h
sample/native_module_define_suite/: BUILD.gn  define_tests.cpp
sample/native_module_demo/: BUILD.gn
sample/native_module_element_suite/: BUILD.gn  element_tests.cpp
sample/native_module_equality_suite/: BUILD.gn  equality_tests.cpp
sample/native_module_error/: BUILD.gn  napi_error.cpp
sample/native_module_error_suite/: BUILD.gn  error_tests.cpp
sample/native_module_exception_suite/: BUILD.gn  napi_exception_suite.cpp
sample/native_module_file/: BUILD.gn  file.js  napi_file.cpp
sample/native_module_file_operations/: BUILD.gn  README.md  file_operations.cpp
sample/native_module_function/: BUILD.gn  napi_function.cpp
sample/native_module_global_suite/: BUILD.gn  napi_global_suite.cpp
sample/native_module_image_processor/: BUILD.gn  README.md  image_processor.cpp
sample/native_module_json/: BUILD.gn  native_module_json.cpp
sample/native_module_json_suite/: BUILD.gn  napi_json_suite.cpp
sample/native_module_kvstore/: BUILD.gn  native_module_kvstore.cpp
sample/native_module_lifecycle_suite/: BUILD.gn  napi_lifecycle_suite.cpp
sample/native_module_map/: BUILD.gn  napi_map.cpp
sample/native_module_math/: BUILD.gn  native_module_math.cpp
sample/native_module_math_ops/: BUILD.gn  js_math_helper.cpp  js_math_helper.h
sample/native_module_math_suite/: BUILD.gn  math_tests.cpp
sample/native_module_netserver/: BUILD.gn
sample/native_module_network_client/: BUILD.gn  README.md  network_client.cpp
sample/native_module_number/: BUILD.gn  napi_number.cpp
sample/native_module_number_suite/: BUILD.gn  napi_number_suite.cpp
sample/native_module_obj_props_suite/: BUILD.gn  (+1 more)
sample/native_module_systemtest/: BUILD.gn  js_napi_instance.cpp  js_test_buffer_napi.cpp  js_test_date_napi.cpp  js_test_object_napi.cpp  js_test_threadsafe_napi.cpp  test_napi.cpp
scope_manager/: native_scope_manager.cpp  native_scope_manager.h
test/unittest/: BUILD.gn  test_ark_api_allowlist.cpp  test_ark_idle_monitor.cpp  test_napi.cpp  test_napi_context.cpp  test_napi_critical.cpp  test_napi_errorcode.cpp  test_napi_ext.cpp  test_napi_global_ref_track.cpp  test_napi_hybrid.cpp  test_napi_pendingexception.cpp  test_napi_performance.cpp  test_napi_sendevent.cpp  test_napi_threadsafe.cpp  test_sendable_napi.cpp  ut.gni
test/unittest/cj_native/: BUILD.gn  test_ark_interop.cpp  test_ark_interop_common.cpp  test_ark_interop_common.h  test_ark_interop_coverage.cpp  test_ark_interop_helper.cpp  test_cj_backtrace.cpp  test_ffi_data.cpp
test/unittest/engine/: test.h  test_ark.cpp
test/unittest/jsvm/: BUILD.gn  jsvm_utils.cpp  jsvm_utils.h  test_jsvm.cpp
utils/: log.cpp  log.h
(+172 files in other folders)
