# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

napi_path = "//foundation//arkui/napi"
ets_runtime_path = "//arkcompiler/ets_runtime"

napi_sources = [
  "$napi_path/callback_scope_manager/native_callback_scope_manager.cpp",
  "$napi_path/module_manager/module_checker_delegate.cpp",
  "$napi_path/module_manager/module_load_checker.cpp",
  "$napi_path/module_manager/native_module_manager.cpp",
  "$napi_path/native_engine/impl/ark/ark_native_deferred.cpp",
  "$napi_path/native_engine/impl/ark/ark_native_engine.cpp",
  "$napi_path/native_engine/impl/ark/ark_native_reference.cpp",
  "$napi_path/native_engine/native_api.cpp",
  "$napi_path/native_engine/native_async_work.cpp",
  "$napi_path/native_engine/native_engine.cpp",
  "$napi_path/native_engine/native_node_api.cpp",
  "$napi_path/native_engine/native_safe_async_work.cpp",
  "$napi_path/reference_manager/native_reference_manager.cpp",
  "$napi_path/utils/log.cpp",
]

declare_args() {
  napi_enable_container_scope = true
  napi_enable_memleak_debug = true
}
