# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

base_output_path = get_label_info(":complex", "target_out_dir")
complex_obj_path = base_output_path + "/complex.o"
gen_js_obj("complex_js") {
  input = "complex.js"
  output = complex_obj_path
}

ohos_shared_library("complex") {
  sources = [ "napi_complex.cpp" ]

  deps = [
    ":complex_js",
    "../..:ace_napi",
  ]

  relative_install_dir = "module"

  subsystem_name = "arkui"
  part_name = "napi"
}