# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../napi.gni")

target("native_module_compression") {
  output_dir = "$root_out_dir/sample/native_module_compression"
  output_name = "native_module_compression"
  sources = [
    "napi_compression.cpp",
  ]
  include_dirs = [
    "../../interfaces/kits/napi",
    "../../native_engine/impl/ark",
  ]
  deps = [
    "//foundation/arkui/napi:arkui_napi_core",
  ]
  configs = [
    "//foundation/arkui/napi:arkui_napi_config",
  ]
  visibility = [ "//foundation/arkui/napi:*" ]
}
