# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../napi.gni")

ohos_shared_library("napi_date") {
  sources = [
    "napi_date.cpp"
  ]
  include_dirs = [
    "../../interfaces/kits/napi"
  ]
  deps = [
    "../../foundation/arkui/napi:napi_core"
  ]
  defines = [
    "OHOS_PLATFORM"
  ]
  output_dir = "$root_out_dir/napi"
  output_name = "napi_date"
  part_name = "ace_napi"
  install_enable = true
  install_images = [ "system" ]
  install_path = "$ohos_root_path/system/lib"
  visibility = [ "//foundation/arkui/napi:*" ]
}
