# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
ohos_shared_library("systemtestnapi") {
  public_configs = [ "//foundation/arkui/napi/:ace_napi_config" ]

  include_dirs = [
    "//foundation/arkui/ace_engine/frameworks",
    "//third_party/libuv/include",
    "//third_party/node/src",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/bounds_checking_function/include",
    "//foundation/arkui/napi",
  ]

  cflags = [
    "-fPIC",
    "-g3",
    "-DNAPI_EXPERIMENTAL",
  ]
  defines = [ "NAPI_TEST" ]
  sources = [
    "js_napi_common.cpp",
    "js_napi_instance.cpp",
    "js_native_module.cpp",
    "js_test_arraybuffer.cpp",
    "js_test_bigint_napi.cpp",
    "js_test_buffer_napi.cpp",
    "js_test_callback_scope_napi.cpp",
    "js_test_date_napi.cpp",
    "js_test_object_napi.cpp",
    "js_test_string_napi.cpp",
    "js_test_threadsafe_napi.cpp",
  ]

  deps = [
    "//foundation/arkui/napi/:ace_napi",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hiviewdfx_hilog_native:libhilog",
    ]
  } else {
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  }

  relative_install_dir = "module"

  subsystem_name = "ace"
  part_name = "napi"
}

import("//build/test.gni")
import("//foundation/arkui/napi/napi.gni")

if (is_standard_system) {
  module_output_path = "ace_engine/native_module_systemtest"
}

ohos_unittest("test_quickjs_systemtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/arkui/napi",
    "//foundation/arkui/napi/interfaces/inner_api",
    "//foundation/arkui/napi/interfaces/kits",
    "//foundation/arkui/napi/native_engine",
    "//foundation/arkui/napi/native_engine/impl/quickjs",
    "//third_party/googletest/include",
    "//third_party/node/src",
    "//commonlibrary/c_utils/base/include",
    "//foundation/arkui/napi/interfaces/kits/napi",
  ]

  cflags = [
    "-g3",
    "-DFOR_QUICKJS_TEST",
  ]

  sources = [
    "test_napi.cpp",
    "test_quickjs.cpp",
  ]
  sources += napi_sources

  defines = [ "NAPI_TEST" ]

  deps = [
    "//foundation/arkui/napi/:ace_napi_quickjs",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
    "//third_party/libuv:uv",
    "//third_party/quickjs:qjs",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hiviewdfx_hilog_native:libhilog",
    ]
  } else {
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  }
}

group("systemtest") {
  testonly = true
  deps = [ ":systemtestnapi" ]
}
