# Copyright (C) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("ark_interop_helper_ffi") {
  include_dirs = [ "../ark_interop" ]

  defines = []

  deps = [
    "../../../..:ace_napi",
    "../ark_interop:ark_interop",
  ]

  sources = [ "ark_interop_helper.cpp" ]

  external_deps = [
    "ets_runtime:libark_jsruntime",
    "hilog:libhilog",
  ]

  if (build_ohos_sdk) {
    defines += [ "PREVIEW" ]
  } else {
    external_deps += [
      "ability_runtime:abilitykit_native",
      "ability_runtime:appkit_native",
      "ability_runtime:napi_base_context",
    ]
    deps += [ "../../../..:ace_container_scope" ]
  }

  if (current_os == "mingw") {
    defines += [ "__WINDOWS__" ]
  }

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "arkui"
  part_name = "napi"
}
